# cnbiros_bci

./: CMakeLists.txt  package.xml
examples/: example_cnbiloop.cpp  example_tic.cpp  example_tid.cpp  example_tidclset.cpp
include/cnbiros_bci/: Flags.hpp  TicClientSet.hpp  TicInterface.hpp  TicTools.hpp  TidClientSet.hpp  TidInterface.hpp  TidToCmdVel.hpp  TidToPoint.hpp  TidTools.hpp  TobiInterface.hpp
include/cnbiros_bci/old/: Flags.hpp  TicInterface.hpp  TicTools.hpp  TidToCmdVel.hpp  TidToPoint.hpp
launch/: ros_tic.launch  ros_tid.launch  rostic.launch  rostid.launch  rostobi_interfaces_example.launch
launch/old/: rostid.launch.old  tid_to_cmdevel.launch  tid_to_point.launch
params/: default_tidtocmdvel_params.yaml  default_tidtopoint_params.yaml  params_tid.yaml
params/old/: default_tidtopoint_params.yaml
src/: TicClientSet.cpp  TicInterface.cpp  TicTools.cpp  TidClientSet.cpp  TidInterface.cpp  TidToCmdVel.cpp  TidToPoint.cpp  TidTools.cpp  TobiInterface.cpp  ros_tic.cpp  ros_ticsender.cpp  ros_tid.cpp  ros_tidsender.cpp  rossync.cpp  rostic.cpp  rostic_sender.cpp  rostid.cpp  rostid_sender.cpp
src/old/: TidToPoint.cpp  rostic_sender.cpp  rostid.cpp  tid_to_cmdvel.cpp  tid_to_point.cpp
srv/: SetTic.srv  Sync.srv  UnSetTic.srv
