<?xml version="1.0"?>
<package format="2">
  <name>cnbiros_bci</name>
  <version>1.0.0</version>
  <description>CNBIROS BCI library</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>cmake_modules</build_depend>
  
  <exec_depend>cnbiloop</exec_depend>
  <build_depend>cnbiloop</build_depend>

  <exec_depend>cnbiros_core</exec_depend>
  <build_depend>cnbiros_core</build_depend>
  <build_depend>cnbiros_tobi_msgs</build_depend>
  <exec_depend>cnbiros_tobi_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
